References & NLP
Supported Languages Reference
Custom Stop Word Lists added & GUI Integration